Bug 699907: Reinstate GTK+ 2.x.x code.

The fix (from March 2018) for deprecated API calls in the GTK+ 3.x.x API
didn't account for the new, supported methods not being available in
GTK+ 2.x.x. Handle both cases, as we do elsewhere.